# gustavotube

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
.pyinstaller/: main_normal.spec  main_pyarmor.spec  versionfile.txt
gustavotube/: __init__.py
