[tool.poetry]
name = "gustavotube"
version = "0.1.0"
description = ""
authors = ["Vitor Gabriel <edvitor13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = {extras = ["default"], version = "^2024.8.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
