[tool.poetry]
name = "gustavotube"
version = "0.1.0"
description = ""
authors = ["Vitor Gabriel <edvitor13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yt-dlp = {version = "^2026.6.9", extras = ["default"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
